apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.10.22-7ca5933
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
